# DomesdayDuplicator-gui-app

./: .gitignore  BUILD.md  CMakeLists.txt  README.md
.github/workflows/: build-binaries.yml
tools/DomesdayDuplicator/: CMakeLists.txt  UsbDeviceLibUsb.cpp  UsbDeviceWinUsb.cpp  mainwindow.cpp  mainwindow.h
tools/dddutil/: mainwindow.ui
